@@ -76,6 +76,7 @@ typedef struct globalopts_struct {
 	OPT_AQUALITYTYPE aquality;
 	OPT_ENABLABLE fullscreen, subtitles, scanlines, fps, stereo;
 	OPT_ENABLABLE music3do, musicremix, speech;
+	OPT_ENABLABLE keepaspect;
 	OPT_CONSOLETYPE menu, text, cscan, scroll, intro, meleezoom, shield;
 	CONTROL_TEMPLATE player1, player2;
 	int speechvol, musicvol, sfxvol;
